--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "web-server": "nodemon src\\app.js --watch ../ -e js,hbs",
-    "start": "node src\\app.js"
+    "web-server": "nodemon src/app.js --watch ../ -e js,hbs",
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "",
