--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.2",
-    "nodemon": "^2.0.10",
-    "postman-request": "^2.88.1-postman.30",
-    "socket.io": "^4.1.3"
+    "postman-request": "^2.88.1-postman.30"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
